// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders button with text 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  Button text
</button>
`;

exports[`<Button /> renders small button 1`] = `
<button
  className="button button--size-small"
  onClick={[Function]}
>
  Button text
</button>
`;
